feat: apresenta medida `em`
Essa unidade de medida está ligada ao tamanho da fonte do elemento
imediatamente superior. Desta forma, será utilizado o primeiro valor
encontrado na hierarquia de elementos, e caso não haja nenhum é pego o
do `html`, o topo da cadeia.

Mas atenção, por utilizar como base o tamanho de fonte do seu elemento
pai, estilos de elementos iguais podem ser diferentes quebrando o layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,11 @@ img {
     width: 100%;
 }
 
+ul {
+    /* Corresponde a 150% */
+    font-size: 1.5em;
+}
+
 /* Buttons */
 
 .btn {
@@ -85,6 +90,10 @@ section {
 
     margin: 0 auto;
     border: 2px solid magenta;
+}
+
+.section-one {
+    font-size: 30px;
 }
 
 .section-two {
