--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
+html {
+    font-size: 20px;
+}
 body {
     margin: 0;
-    font-size: 18px;
+    font-size: 10px;
     font-family: "Lato", sans-serif;
     color: #2e354f;
 }
@@ -14,12 +17,12 @@ strong {
 /* Typography */
 
 h1 {
-    font-size: 36px;
+    font-size: 2rem;
     margin: 0;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #ef5839;
 }
 
@@ -37,8 +40,7 @@ img {
 }
 
 ul {
-    /* Corresponde a 150% */
-    font-size: 1.5em;
+    font-size: 1.2rem;
 }
 
 /* Buttons */
@@ -99,4 +101,5 @@ section {
 .section-two {
     background: #8625d2;
     color: #fff;
+    font-size: 1.2rem;
 }
