feat: aplica alinhamento dos itens

--- a/src/styles.css
+++ b/src/styles.css
@@ -97,6 +97,8 @@ section {
 
     flex-wrap: wrap;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
 
 .item {
