--- a/src/styles.css
+++ b/src/styles.css
@@ -153,3 +153,10 @@ section {
     color: #fff;
     font-size: 1.2rem;
 }
+
+.container-grid {
+    display: grid;
+    /* grid-template-columns: 100px 100px 50px;
+    grid-template-rows: 50px 100px 200px; */
+    grid-template: 50px 100px 200px / 100px 100px 50px;
+}
