--- a/src/styles.css
+++ b/src/styles.css
@@ -156,7 +156,8 @@ section {
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 150px 150px;
+    grid-template-columns: 150px 150px;
+    align-items: start;
 }
 
 .grid-item {
@@ -167,4 +168,18 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.big {
+    padding: 3em 2em;
+    background: #ff508f;
+}
+
+.another-big {
+    padding: 5em 3em;
+    background: plum;
+}
+
+.self {
+    align-self: end;
 }
