feat: configura gap do grid
O gap é o espaçamento entre as linhas e colunas do grid

--- a/src/styles.css
+++ b/src/styles.css
@@ -158,6 +158,10 @@ section {
     display: grid;
     grid-template-columns: 150px 150px;
     align-items: start;
+
+    gap: 1em 2em;
+    /* grid-column-gap: 2em;
+    grid-row-gap: 1em; */
 }
 
 .grid-item {
