feat: utiliza 'repeat()' para colunas do mesmo tamanho

--- a/src/styles.css
+++ b/src/styles.css
@@ -156,7 +156,7 @@ section {
 
 .grid {
     display: grid;
-    grid-template-columns: 150px 150px 150px;
+    grid-template-columns: repeat(2, 150px) 200px;
     grid-template-areas:
         "header header header"
         "sidebar content content"
