feat: define a estrutura base do projeto

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,204 +1,16 @@
-html {
-    font-size: 20px;
+:root {
+    --background-color: #00030c;
+    --white-color: #fff;
+    --gray-color: #c0c0c0;
+    --font-family: "Inter";
+    --blue-button: #167bf7;
+    --blue-button-effect: #3c92fa;
 }
 
 body {
-    background: #8625d2;
-    margin: 0;
-    font-family: "Lato", sans-serif;
-    color: #fff;
-    text-align: center;
-}
-
-h1,
-h2,
-strong {
-    font-weight: 900;
-}
-
-/* Typography */
-
-h1 {
-    font-size: 2rem;
-}
-
-h2 {
-    font-size: 1.5rem;
-    color: #ef5839;
-}
-
-a {
-    color: #ef5839;
-}
-
-a:hover,
-a:focus {
-    color: #d4b44c;
-}
-
-img {
-    width: 100%;
-}
-
-ul {
-    font-size: 1.2rem;
-}
-
-/* Buttons */
-
-.btn {
-    display: inline-block;
-    padding: 10px 25px;
-    text-decoration: none;
-}
-
-.btn-accent {
-    background: #ef5839;
-    color: #fff;
-}
-
-.btn-accent:hover {
-    background: #d4b44c;
-    color: #2e354f;
-}
-
-.btn-white {
-    background: #fff;
-    color: #2e354f;
-}
-
-.btn-white:hover {
-    background: #999;
-    color: #2e354f;
-}
-
-/* Layout */
-
-header {
-    background: #8625d2;
-    padding: 45px 0;
-    color: #fff;
-}
-
-section {
-    padding: 45px 0;
-}
-
-.container {
-    border: 10px solid #ff508f;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 0.25em;
-    height: 200px;
-    display: flex;
-
-    /* Substitui as propriedades explícitas
-    flex-flow: column wrap;
-    */
-
-    flex-wrap: wrap;
-    flex-direction: row;
-
-    /* Define espaçamentos ao redor dos elementos mas
-    que podem ser diferentes entre si
-    justify-content: space-around;  */
-
-    /* Define espaçamentos entre elementos, ignorando as
-    margens inicial e final
-    justify-content: space-between;  */
-
-    /* Distribui espaçamentos igualmente entre elementos */
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.item {
-    background: #11d15e;
-    margin: 0.5em;
-    padding: 0.5em;
-    color: #2e354f;
-}
-
-.item-1 {
-    background: plum;
-
-    /* Força a redução de tamanho do elemento */
-    flex-shrink: 1;
-}
-
-.item-2 {
-    /* Força o aumento de tamanho para elemento */
-    flex-grow: 1;
-}
-
-.base {
-    /* Garante um tamanho mínimo para o elemento */
-    flex-basis: 20%;
-}
-
-.stretch {
-    align-self: stretch;
-}
-
-.end {
-    align-self: flex-end;
-}
-
-.section-one {
-    font-size: 30px;
-}
-
-.section-two {
-    background: #8625d2;
-    color: #fff;
-    font-size: 1.2rem;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(2, 150px) 200px;
-    grid-template-areas:
-        "header header header"
-        "sidebar content content"
-        "footer footer footer";
-}
-
-.header {
-    grid-area: header;
-}
-
-.sidebar {
-    grid-area: sidebar;
-}
-
-.content {
-    grid-area: content;
-}
-
-.footer {
-    grid-area: footer;
-}
-
-.grid-item {
-    background: #b823c1;
-    color: #fff;
-    padding: 1em 2em;
-    border: 2px solid purple;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.big {
-    padding: 3em 2em;
-    background: #ff508f;
-}
-
-.another-big {
-    padding: 5em 3em;
-    background: plum;
-}
-
-.self {
-    align-self: end;
+    background-color: var(--background-color);
+    color: var(--white-color);
+    font-family: var(--font-family);
+    font-size: 2em;
+    font-weight: 400;
 }
