fix: remove repetição de imagem no background

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ body {
 
 .main {
     background-image: url("images/background.png");
+    background-repeat: no-repeat;
     align-items: center;
     text-align: center;
 }
