--- a/src/styles.css
+++ b/src/styles.css
@@ -97,3 +97,21 @@ body {
     list-style-type: none;
     margin: 5em 0;
 }
+
+footer {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.footer-links a {
+    text-decoration: none;
+    color: var(--white-color);
+    margin-left: 1em;
+}
