--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
     background-color: var(--background-color);
     color: var(--white-color);
     font-family: var(--font-family);
-    font-size: 1em;
+    font-size: 16px;
     font-weight: 400;
 }
 
