--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@ body {
 .main {
     background-image: url("images/background.png");
     background-repeat: no-repeat;
+    background-size: contain;
     align-items: center;
     text-align: center;
 }
