feat: aplica comportamento ao passar o mouse no botão

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,11 @@ body {
     margin-bottom: 1em;
 }
 
+.main-btn:hover {
+    background-color: var(--blue-button-effect);
+    color: var(--background-color);
+}
+
 .main-btn-outline {
     background-color: transparent;
     border: 2px solid var(--white-color);
