--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@
     --blue-button-effect: #3c92fa;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: var(--background-color);
     color: var(--white-color);
